add modules when running gradle run